test/e2e/chainsaw/hybridgateway/common/assertions/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: kong-foo
  namespace: kong
status:
  (conditions[?type == 'Accepted']):
    - status: 'True'
      reason: Accepted
  (conditions[?type == 'Programmed']):
    - status: 'True'
      reason: Programmed
  (conditions[?type == 'DataPlaneReady']):
    - status: 'True'
      reason: Ready
  (conditions[?type == 'KonnectGatewayControlPlaneProgrammed']):
    - status: 'True'
      reason: Programmed
  (conditions[?type == 'KonnectExtensionReady']):
    - status: 'True'
      reason: Ready
  (conditions[?type == 'GatewayService']):
    - status: 'True'
      reason: Ready
