test/e2e/chainsaw/hybridgateway/common/assertions/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: kong-foo
status:
  conditions:
    - type: Accepted
      status: "True"
