test/e2e/chainsaw/hybridgateway/common/assertions/gatewayconfiguration.yaml
apiVersion: gateway-operator.konghq.com/v2beta1
kind: GatewayConfiguration
metadata:
  name: kong-foo
  namespace: kong
