test/e2e/chainsaw/hybridgateway/common/assertions/konnect-apiauth.yaml
apiVersion: konnect.konghq.com/v1alpha1
kind: KonnectAPIAuthConfiguration
metadata:
  name: konnect-api-auth-dev-1
  namespace: kong
status:
  conditions:
    - type: APIAuthValid
      status: "True"
