test/e2e/chainsaw/hybridgateway/gateway-tls-certificates/01-httproute-echo.yaml
---
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: ($http_route_name)
  namespace: ($http_route_namespace)
  labels:
    chainsaw/test: ($test_name)
spec:
  hostnames: ($route_hosts)
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: (join('-', [($test_name), 'gateway']))
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /echo
      backendRefs:
        - name: ($service_name)
          port: 1027
